
Package org.springframework.webflow.config
* Fixed bug in WebFlowConfigNamespaceHandler that caused the type attribute of the repository tag
  not to be read properly and throw an exception (SWF-239).
* Added Spring tooling funtionality to the BeanDefinitionParser to allow tools such as SpringIDE
  to properly interact with it (SWF-254).

Package org.springframework.webflow.context
* The ThreadLocal in ExternalContextHolder is now final (SWF-262).

Package org.springframework.webflow.conversation
* The SessionBindingConversationManager now re-binds the ConversationContainer in the session
  every time a contained conversation is unlocked (SWF-244).

Package org.springframework.webflow.engine
* FlowExecutionImpl.handleException() now also tries to handle FlowExecutionExceptions that
  occur during exception handling (SWF-261).
* The XmlFlowBuilder now also supports OGNL expressions in the "to" attribute of a transition
  when using the "on-exception" attribute (SWF-269).
* The XmlFlowBuilder now consistently uses "fromStringTo(Class.class)" to resolve types (SWF-268).
* Added AbstractFlowBuilderFlowRegistryFactoryBean for easy setup of a flow registry containing
  flows built using AbstractFlowBuilders.
* Added DefaultFlowServiceLocator(String, BeanFactory) convenience constructor to the DefaultFlowServiceLocator.
* Added BeanFactoryFlowVariable(String, BeanFactory, ScopeType) convenience constructor to the
  BeanFactoryFlowVariable.
* Added settableExpression() method to AbstractFlowBuilder.

Package org.springframework.webflow.execution
* Added FlowExecutionListener.sessionCreated(RequestContext, FlowSession) callback, useful for
  setting flow attributes before the flow starts (SWF-223).
* ClientContinuationFlowExecutionRepository now uses 'URL-safe Base64 encoding' (SWF-270).

Package org.springframework.webflow.executor
* Added resource URL encoding to redirects in a JSF environment (SWF-256).